--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 			    <div class="col-12">
 				<div class="d-flex flex-row justify-content-center">
 				    <i class="fa-regular fa-copyright footer-icon"></i>
-				    <p class="copy-para">2022 by Sai Teja SP.</p>
+				    <p class="copy-para">2022. Created by Sai Teja SP.</p>
 				</div>
 			    </div>
 			</div>
